# X-Voice.cpp

./: .gitignore  .gitmodules.standalone  AGENTS.md  CMakeLists.txt  README.md
docs/: quantization.md  release.md  roadmap.md  status.md
docs/adr/: ADR-0001-runtime-boundary.md
docs/specs/: x-voice-cpp-v0.md
include/: x_voice.h
resources/: zh_frontend_overrides.tsv
resources/zh_pinyin_dict/: manifest.json
resources/zh_pinyin_dict/mandarin/: phrases_dict.txt  phrases_map.txt  user_dict.txt  word.txt
scripts/dev/: bench_xvoice_synthesis.py  build_xvoice_cuda.sh  check_release_tree.py  check_wav_frontend_fixtures.py  check_xvoice_cpp_v0_smoke.sh  check_xvoice_synthesis_regression.py  compare_python_pinyin_cpp_dict.py  export_stage2_host_fixture_raw.py  export_stage2_srp_fixture_raw.py  export_vocos_fixture_raw.py  quantize_xvoice_gguf.sh  refresh_self_contained_gguf.sh  synthesize_product_cuda.sh
src/: audio.cpp  frontend.cpp  model.cpp  srp.cpp  stage2.cpp  synthesis.cpp  vocos.cpp  x_voice.cpp  x_voice_cli.cpp  x_voice_internal.h
tools/: merge_pinyin_dicts.cpp  quantize_gguf.cpp
